# ChangeLog for dev-libs/xapian-bindings
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/xapian-bindings/ChangeLog,v 1.101 2015/04/20 23:52:19 blueness Exp $

  20 Apr 2015; Anthony G. Basile <blueness@gentoo.org>
  -xapian-bindings-1.2.14.ebuild, -xapian-bindings-1.2.17.ebuild,
  -xapian-bindings-1.2.18.ebuild, -xapian-bindings-1.3.1.ebuild:
  Clean up.

*xapian-bindings-1.2.20 (20 Apr 2015)
*xapian-bindings-1.3.2 (20 Apr 2015)

  20 Apr 2015; Anthony G. Basile <blueness@gentoo.org>
  +xapian-bindings-1.2.20.ebuild, +xapian-bindings-1.3.2.ebuild:
  Version bump.

  19 Apr 2015; Pacho Ramos <pacho@gentoo.org> xapian-bindings-1.2.19.ebuild:
  x86 stable wrt bug #531758

  14 Apr 2015; Agostino Sarubbo <ago@gentoo.org> xapian-bindings-1.2.19.ebuild:
  Stable for ia64, wrt bug #531758

  13 Apr 2015; Agostino Sarubbo <ago@gentoo.org> xapian-bindings-1.2.19.ebuild:
  Stable for alpha, wrt bug #531758

  08 Apr 2015; Michał Górny <mgorny@gentoo.org> xapian-bindings-1.2.17.ebuild,
  xapian-bindings-1.2.18.ebuild:
  Drop old Python implementations

  01 Apr 2015; Agostino Sarubbo <ago@gentoo.org> xapian-bindings-1.2.19.ebuild:
  Stable for sparc, wrt bug #531758

  27 Mar 2015; Agostino Sarubbo <ago@gentoo.org> xapian-bindings-1.2.19.ebuild:
  Stable for amd64, wrt bug #531758

  24 Mar 2015; Markus Meier <maekke@gentoo.org> xapian-bindings-1.2.19.ebuild:
  arm stable, bug #531758

  21 Mar 2015; Anthony G. Basile <blueness@gentoo.org>
  xapian-bindings-1.2.19.ebuild:
  Stable on ppc and ppc64.  Bug #531758.

  20 Mar 2015; Justin Lecher <jlec@gentoo.org> xapian-bindings-1.2.14.ebuild,
  xapian-bindings-1.2.17.ebuild, xapian-bindings-1.2.18.ebuild,
  xapian-bindings-1.2.19.ebuild, xapian-bindings-1.3.1.ebuild:
  Fix tcl/tk slotting

  05 Dec 2014; Agostino Sarubbo <ago@gentoo.org> xapian-bindings-1.2.18.ebuild:
  Stable for x86, wrt bug #520794
