@@ -6,23 +6,23 @@ DIST xapian-bindings-1.2.20.tar.xz 828864 SHA256 98594534697642dee563c0e7fede43f
 DIST xapian-bindings-1.3.2.tar.xz 1177620 SHA256 bcf9948cd6e51c4e80ed5c1284b3349e667162dcbd048a4136c380adfe570f92 SHA512 65b8cb9a27b19c04179c6b8147110bcac118b5c41308ad87fef7db2b3b16d2032645f5d010492ebd772cb6bc673228b68837159764cb6d8fc09dde11e81174a7 WHIRLPOOL ffb4709a95d4139b4d9863195ec8ffc23a4936a055424b154e0e1f8c6d00bc81e919246e58fe68b76738bee05941a868b38e87ba1302ac3e392152b4592a1d1a
 EBUILD xapian-bindings-1.2.19.ebuild 5580 SHA256 dd0c3703dc7c6df189936799833f8a4eec8da3f6ce69482b66466929b3deb9e9 SHA512 3326da277a59f5397fd75e73088598dee629b1d5e0c9eb5d07e5545fc2e2f108b466bd5c709bd5166f542d9aab9c0d6350d2d60518b315fdceacb84be212b922 WHIRLPOOL 770d8f46f9be2ce213cb0dd006a63af0e9005d7c77a91ab6e29f9168a80bde7380596b9d71fce1c991cdf354e2e997493fd7fc612bd9e792051cd12a3b33ea2a
 EBUILD xapian-bindings-1.2.20.ebuild 5588 SHA256 d636d578b3d4b6dd7e3a4389e9a1a4e2bbd1826ee9d87f59476907bba4377377 SHA512 6ed30c5eeb6eb92fcbc70500f63d0a974fe708314922466f2915fb45eb388b199e6b1cbfd11be379ffe214ab5c1b5733980c7af0fd6810cdf2c956278fa016e7 WHIRLPOOL 8df26a62d59842015467a258e32b2fb0de5950179c010b8cef993939fc7417524d8019f8a2866db185545436ad77477954a9bc47ef27423d73d1f08f5f455f5b
-EBUILD xapian-bindings-1.3.2.ebuild 4449 SHA256 83ab50ea4403d3c072180c8e892f2c66e8fc37e95af1e2db533b86cb30715888 SHA512 cc96a85143621e8f9ea36ec56ddb9b1e72a9f8f9b406ff7a6c33123879d23da7f5ee7bce68b78f7d41acc4709c8d1d4586faa2ded6273b719fc9bd85a815a4d3 WHIRLPOOL 9bd13c2c192d0575232f93d95ee4599052bf81ba71857b8d98af2d4e5035b2aca607d24046769be26a6f249c4eb3e3ef2ec16e5cbde5f773365007d9e423fdea
-MISC ChangeLog 16024 SHA256 bb577f84b67e9d60e118fe966a2188a98508cf05a53502fcb8ba093371dd0059 SHA512 c9f6408a098902bad169274b1b58d99ddbd13a7bad0293f516e6ea419f44c27a7170b41e78c5a44ab9130977f331bcd870e9b2fadcab00ccac8460adeb6c9f6c WHIRLPOOL 343f9a1e500e3b59f5d73dbf7f692b2794bfa5463c1bcf96fe67cf3cc16274361ed97094e095d469abed94efb41b41d693c2749b1119df2048a41fef681cec7a
+EBUILD xapian-bindings-1.3.2.ebuild 4525 SHA256 4577cb1395d87dbebc27e78aa3e9b6a93caee9938d9161dfc953b43dc5eee7f8 SHA512 25a5fcd905847f82b82f79ce527418b5c96cffb0c7bb1780b19958d20eb80e5c7370dbe3efa7becfae1a403c2386369c2cb3e4ee419939146917060141fc75a2 WHIRLPOOL 620dd085a0c7131bf7481f23a25b09b05dde3fd168c2f18d9c01912557d9eb385b8b6fff7c4d4e7ae73a49471f525dad626e41f9d6333140d8d23fbb3875045c
+MISC ChangeLog 16131 SHA256 897df4007de4082b484e66896e77cc43fcfabf9086a78ce7e39d7a26d6ba6021 SHA512 57ae941396525c52dba5f017bd9cbe9aecf0f427af695516465fab10f4d879ad77fcd8869a03fac18a199bf2052d3cfb997c1f2f06e7890c0f031aec7cfbf560 WHIRLPOOL 16558243b22fa176838c549915ef8ac8e77cb7690c3f19c6a62ecd810a7ed884a7f5094119970569259b47d7ce4eece8e61a0be576e909a645c1754f300f4b40
 MISC metadata.xml 367 SHA256 e757cf120c1188c0010caaf7449e89deee52d8aa275f4f0c3b9cc0c097d28596 SHA512 e562b4dfbdcf62a3f860cd185dcd5fb2cf4067cb9b6c11c94669027c9cbae94bc437fa63e68b3b982a6bdda624087a60b24a269031fae2f3f975efb3d8e85d44 WHIRLPOOL 1314776082f07f5fdf74d15ad6b5093276b58f47e4dce35c0377e6a7baef0941bf567e43047e4ff80a726e2078d506c9029cd033cba8aeba9110b75cbbffa036
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVNZHSAAoJEJOE+m71LUu6t0sP/2G9CnJqjfsOCUmsAAiBzvs/
-gLogwFqo5AXjE/Tsx/UTBtMOvO3ArBPXxq4+d1RJMsIphVhKsnFqJPxDpA2l8QQa
-I+m1+82ceRhYmAmLeQQNVJzdTyf/Umfc2JMcaDGtxuq1qmxPX4AREied7/UnjpXj
-F5k1dHWlawtEca63oMnqmb7NaTCaiSpUWCUzCfxBabaajANjd5RIb/gZWx0eOvPm
-WKhkFjO6PCkITJ9JUVk88b9Iag+S+d0IIeRWAupUWJq9B5moj+4we+Qid71vKzdm
-Xe9qsKJCvVAlZpSiqHXRHnQCyeuZLDqgcBbnr7UValkrmvTfw3mNbcOsrVNGrIgj
-LrUzllgvQeTJjj8gibAbYiOvv0Ius8GUcjMhxldOYJeDpe+FuK+JPzmjaVf9orP4
-zywNczIgPdrmNecLrOiv1gGRGZunvyr+mPsFCWdujWc+UTmfdSB5dVuzOKAxTzhd
-xNdyZzyjWvxn47b3P3hM3dFbN0w2Qma/6jEM94ODvVCiTQzU3vPQmXJTsksgddTa
-91Y4Mn2TsT+nhjBCUnXUYorxT0F7Ohr1fE26M8eSVBwVFUGjq/lbx+hGPIdqeTUM
-Xx+XFSnAU6Gmvkpks56k1PaDgdmshsTLiGBebQ8wfHoczRhMH98zH2fLtuV9b1eG
-pdaGrGWq/BgBq4xpRgAo
-=gCP1
+iQIcBAEBCAAGBQJVTRUMAAoJEJOE+m71LUu6aI4QAKqD2O4g5jXM24DPNjZM4ua5
+Qv9HhnsutuGMOon17T10MjUGBXlGN0v+Xgp86qtWMxbGX2Vs/Qjj1OFiztR+Quta
+xI/sRIRl2NE7myGIFMBroyFuF3P8n8vggk88TIoztWkhEjzw11vcaLaDLKlEvrjn
+KVb01vjxFeDPeLqfGmAyPeL3nNdBxtRi3Qr6rB7ODlgXqmk4i9HZbG69tTLfIPe5
+/3FAZz+xehx2VXDKS/JoHD5XpbvPjvgruOMmtl5zyIyidXECouKHBUHLnUi2uk0b
+XwBoR/mwM/pse5Qx+WOt+yzTgVd7oygtiZbRyQ2wo54F/luA4H9TFPbI72TI49YA
+Pr+qqLRmwu43jN3J+PreUaMAkJ2eghlvrkljobJq1TM6rcPiCG6qeYl18UoevR9g
+aAhv0Y6d3gFpXLAKrXGE8CZZ89galvJe9YoeAmc+hAtWxiyO10Jd/5UGP55TSwYq
+w/HiGvk+Wm0uMmzfdCN6xVgrWVccv0QEkx2aTtf9Tj4A7bq7udMdPLg5leDJs4Pt
+pSFYxWqK/WMrAqqYfp4J71XZNVAK82A21VF5XnWy8L/SLP7srWCOh+pbHFOfbeKJ
+ZDeJZdwJe9VeMXC9bA59ODt+ZNzw59Ol/Qv1j72yspbc5wutBZ+kCE9Z9qebhdaN
+kvp4uD75KzFZFGPgB7LJ
+=K649
 -----END PGP SIGNATURE-----
