@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/xapian-bindings
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/xapian-bindings/ChangeLog,v 1.101 2015/04/20 23:52:19 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/xapian-bindings/ChangeLog,v 1.102 2015/05/08 19:56:44 blueness Exp $
+
+  08 May 2015; Anthony G. Basile <blueness@gentoo.org>
+  xapian-bindings-1.3.2.ebuild:
+  Fix bug #548122.
 
   20 Apr 2015; Anthony G. Basile <blueness@gentoo.org>
   -xapian-bindings-1.2.14.ebuild, -xapian-bindings-1.2.17.ebuild,
